2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Frédéric Nadeau:
	patch #7260: Addition to power.h
	* include/avr/power.h: Extend clock prescaler support to devices
	with XDIV (ATmega103, ATmega64, ATmega128)

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Maksim Kuleshov:
	patch #7654 include/delay.h: delay_us >255us without decreasing
	resolution
	* include/util/delay.h.in (_delay_us): Add a second decision
	logic that decides whether _delay_loop_2() could still be
	used, or the fallback to _delay_ms() is required; while here,
	reorder local variables so it compiles warning-free in all
	configurations

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by W. Trevor King:
	patch #7826 Add ATMega32u4 support to the led-blinking demo
	* doc/examples/demo/iocompat.h: Add ATmega32U4
	* doc/examples/demo/Makefile: (Dito.)

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Stefan Kristiansson:
	patch #7910 Add missing PCINT2_vect to iotn40.h and update
	all the following vector numbers
	* include/avr/iotn40.h: Add PCINT2_vect, and shift all
	subsequent (misplaced) vectors; rename ADC_ADC_vect into
	ADC_vect to match the datasheet.

2013-05-02 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/tools-install.dox: Drop references to FreeBSD's
	CVSweb, as it's no longer maintained.  Add a comment that the
	historically available per-language GCC source files are no
	longer available, starting with GCC 4.7.

2013-05-02 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Alex Crawford:
	patch #7909 Adding __volatile__ to __asm__ within pgmspace header
	* include/avr/pgmspace.h: Make all __asm__ statements
	volatile.

2013-04-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add IO symbol definitions to crt*.o files:
	* configure.ac: add crt1/iosym/Makefile to the build
	* devtools/ioreg.pl: Emit a DIE for uint32_t if needed.
	* devtools/generate_iosym.sh: New file.